View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028039 | Open CASCADE | OCCT:Coding | public | 2016-11-02 12:44 | 2016-12-09 16:39 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0028039: Coding rules, TObj - pass file name by reference | ||||
Description | It is common practice to pass TCollection_AsciiString/TCollection_ExtendedString by reference, however the following methods pass string by copy: - TObj_Application::SaveDocument() - TObj_Application::LoadDocument() - TObj_Model::SaveAs() - TObj_Model::Load () which is inconsistent and sub-optimal. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28039 has been created by kgv. SHA-1: c34c49593b892f42315f5fe0d74ed2fd59d94b18 Detailed log of new commits: Author: kgv Date: Wed Nov 2 12:50:02 2016 +0300 0028039: Coding rules, TObj - pass file name by reference |
|
Please check building, regression testing is not needed. |
|
Branch CR28039 has been updated forcibly by apv. SHA-1: 9f9b54021e87eb16aad85b238809c67f419a7f4c |
|
Branch CR28039 has been rebased on the current master |
|
Dear BugMaster, Branch CR28039 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: 9f9b54021e87eb16aad85b238809c67f419a7f4c Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 63 Windows: 0 MacOS: 1139 |
|
Branch CR28039 has been deleted by kgv. SHA-1: 9f9b54021e87eb16aad85b238809c67f419a7f4c |
occt: master be70005c 2016-11-02 09:50:02 Committer: apn Details Diff |
0028039: Coding rules, TObj - pass file name by reference |
Affected Issues 0028039 |
|
mod - src/TObj/TObj_Application.cxx | Diff File | ||
mod - src/TObj/TObj_Application.hxx | Diff File | ||
mod - src/TObj/TObj_Model.cxx | Diff File | ||
mod - src/TObj/TObj_Model.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-11-02 12:44 | kgv | New Issue | |
2016-11-02 12:44 | kgv | Assigned To | => kgv |
2016-11-02 12:44 | kgv | Relationship added | related to 0025534 |
2016-11-02 12:44 | kgv | Relationship replaced | child of 0025534 |
2016-11-02 12:50 | git | Note Added: 0059768 | |
2016-11-02 12:50 | kgv | Note Added: 0059769 | |
2016-11-02 12:50 | kgv | Assigned To | kgv => bugmaster |
2016-11-02 12:50 | kgv | Severity | minor => trivial |
2016-11-02 12:50 | kgv | Status | new => resolved |
2016-11-02 12:51 | kgv | Status | resolved => reviewed |
2016-11-03 17:10 |
|
Assigned To | bugmaster => apv |
2016-11-03 18:56 | git | Note Added: 0059888 | |
2016-11-03 18:56 |
|
Note Added: 0059889 | |
2016-11-07 12:50 |
|
Note Added: 0059919 | |
2016-11-07 12:50 |
|
Assigned To | apv => bugmaster |
2016-11-07 12:50 |
|
Status | reviewed => tested |
2016-11-07 12:51 |
|
Test case number | => Not needed |
2016-11-09 17:43 | apn | Changeset attached | => occt master be70005c |
2016-11-09 17:43 | apn | Assigned To | bugmaster => apn |
2016-11-09 17:43 | apn | Status | tested => verified |
2016-11-09 17:43 | apn | Resolution | open => fixed |
2016-12-07 11:30 | git | Note Added: 0061263 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |