0028039: Coding rules, TObj - pass file name by reference